--- a/css/loader.css
+++ b/css/loader.css
@@ -6,12 +6,16 @@
 
 body {
 
-    font-size: 18px;
-    line-height: 1.6;
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     min-height: 100vh;
+}
+
+.main {
+    opacity: 0;
+    display: none;
+    transition: opacity 2s ease-in;
 }
